--- a/Cópia_de_Atividade_Avaliativa_Individual_RA3_3.ipynb
+++ b/Cópia_de_Atividade_Avaliativa_Individual_RA3_3.ipynb
@@ -297,7 +297,7 @@
         "\n",
         "resposta: \n",
         "\n",
-        "$\\int 4x \\cos(2-3x) dx = \\frac{4(3x\\sin(3x-2)+\\cos(3x-2))}{9} + C\n",
+        "$\\int 4x \\cos(2-3x) dx = \\frac{4(\\cos(2-3x)-3x\\sin(2-3x))}{9} + C\n",
         "$"
       ],
       "metadata": {
